[tool.poetry]
name = "toolbox"
version = "0.2.0"
description = "Developer toolbox CLI - task management and utilities"
authors = ["Alex Basile <basileaw@gmail.com>"]
readme = "README.md"
packages = [{ include = "toolbox" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = "^0.12.0"
rich = "^14.0.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
poethepoet = "^0.37.0"

# Console script - works immediately after installation
[tool.poetry.scripts]
box = "toolbox.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
